# Snake

./: Cargo.toml  LICENSE  patch_to_generate_tensorflow_framework_lib.patch
src/: machine_learning.rs  main.rs  snake.rs
