[package]
name = "snake"
version = "0.1.0"
authors = ["Robert Mikhayelyan <rob.mikh@outlook.com>"]
edition = "2018"

[dependencies]
winit = "0.22.0"
raw-window-handle = "0.3.3"
winrt = { git = "https://github.com/microsoft/winrt-rs" }
rand = "0.7.3"
strum = "0.18.0"
strum_macros = "0.18.0"
tensorflow = { version = "0.15.0", features = ["experimental_training", "tensorflow_gpu"] }